<resources>
    <string name="app_name">Samvach</string>
    <string name="web_client_id">459397568313-sp0d0694ludkrm0iiosq0s9v8pisia5l.apps.googleusercontent.com</string>
    <string name="log_out">Log Out</string>
    <string name="notifications_tab_text">Notifications</string>
    <string name="community_tab_text">Community</string>
    <string name="chats_tab_text">Chats</string>
    <string name="menu_settings_text">Settings</string>
    <string name="menu_new_group_text">New group</string>
    <string name="menu_verified_send_menu">Verified send</string>
    <string name="hidden_chats_text">Hidden chats</string>
    <string name="menu_search_text">Search</string>
    <string name="number">Number</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="new_to_samvach">New to SamVach?</string>
    <string name="register">Register</string>
    <string name="about_description">On vacation to Nepal</string>
    <string name="name_txt">Hardik Dhuri</string>
    <string name="setup_profile_info_btn_text">Setup Profile</string>
    <string name="helper_text_on_profile_info">Please set your name and profile picture</string>
    <string name="profile_info_title">Setup Profile</string>
    <string name="status_description">Only on Samvach</string>
    <string name="profile_info_name_hint">Enter your Name</string>
    <string name="row_name_ph">Hardik Dhuri</string>
    <string name="last_text_ph">Hi, How you doing?</string>
</resources>