<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetupProfileInfo"
    android:padding="30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_iv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/user_image_placeholder"/>


    <TextView
        android:id="@+id/profile_info_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info_title"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/helper_text_profile_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_text_on_profile_info"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/fainted"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/profile_info_name_hint"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/profile_setup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_background"
        android:text="@string/setup_profile_info_btn_text" />


  </LinearLayout>