<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/samvach" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contact_input"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        android:layout_height="50dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/contact_edt"
            android:inputType="phone"
            android:hint="@string/number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:layout_marginHorizontal="150dp"
        android:background="@drawable/btn_background"
        android:layout_marginTop="35dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
    <View
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:background="#808080" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option_tv"
        android:text="@string/or"
        />
        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="#808080" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_tv"
        android:text="@string/new_to_samvach"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_tv"
        android:text="@string/register"
        android:clickable="true"
        android:layout_marginStart="5dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:focusable="true" />
    </LinearLayout>

</LinearLayout>